# VisionServeX

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENT_RULES.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  VERSION_DECISION.txt  pyproject.toml
.github/workflows/: ci.yml  optional-extras-smoke.yml  publish-sidecars.yml  publish.yml
docker/: Dockerfile  Dockerfile.cuda  docker-compose.yml
docker/florence2/: Dockerfile  server.py
docker/maskdino/: Dockerfile
docker/mmrotate-legacy/: Dockerfile
docker/openmmlab/: Dockerfile  docker-compose.yml  sidecar_app.py
docs/: about.md  agent_safety.md  anastig_integration_contract.md  anastig_model_allowlist_v318.json  anastig_model_allowlist_v319.json  anastig_model_allowlist_v320.json  anastig_model_allowlist_v321.json  anastig_model_contract_v318.md  anastig_model_contract_v319.md  anastig_model_contract_v320.md  anastig_model_contract_v321.md  anastig_saas_policy.md  anastig_upgrade_notes.md  api_reference.md  beginner_quickstart.md  benchmark_competitiveness.md  benchmarks.md  byot_models.md  capability_truth.md  cli.md  cloudflare_tunnel.md  colab_gpu_worker.md  commercial_safe_core.md  commercial_safety.md  concurrency.md  deployment.md  device_check.md  device_selection.md  dinov3_depth.md  domain_aerial.md  domain_agriculture.md  domain_industrial.md  domain_medical.md  domain_pose_obb.md  domain_surveillance.md  evaluation_metrics.md  export.md  gated_models.md  global_model_count.md  gpu_batching.md  (+51 more)
docs/audit/: visionservex_benchmark_plan.md  visionservex_command_inventory.json  visionservex_expected_blockers.md  visionservex_feature_inventory.json  visionservex_model_inventory.json  visionservex_model_inventory.md  (+7 more)
examples/: batch.py  curl.sh  grounded_segment.py  predict.py  serve.py
notebook/: .venv  README.md  RUN_ALL.ipynb  RUN_ALL_EXECUTED_v260.ipynb  RUN_ALL_EXECUTED_v261.ipynb  VisionServeX_Clean_Task_Benchmark_EXECUTED_PYPI_v34.ipynb  VisionServeX_Clean_Task_Benchmark_EXECUTED_REAL_PYPI_v34.ipynb  VisionServeX_Clean_Task_Benchmark_EXECUTED_v34.ipynb  VisionServeX_Clean_Task_Benchmark_v34.ipynb  VisionServeX_Master_Benchmark_Demo.ipynb  VisionServeX_Master_Benchmark_Demo_EXECUTED.ipynb  run_all.sh
reports/: canonical_smoke_summary_v230.csv  canonical_smoke_summary_v230.json  core_smoke_matrix_v229.csv  core_smoke_matrix_v229.json  core_smoke_matrix_v230.csv  core_smoke_matrix_v230.json  deimv2_detection_400_v235.json  deimv2_hf_audit_v230.json  deimv2_hf_audit_v234.json  detection_leaderboard_400_v227_source.csv  libreyolo_default_safe_contract_v234.csv  libreyolo_default_safe_contract_v234.json  libreyolo_default_safe_contract_v235.csv  libreyolo_default_safe_contract_v235.json  libreyolo_detection_400_v235.json  libreyolo_dfine_s_smoke_v230.json  libreyolo_doctor_v34.json  libreyolo_hf_full_audit_v230.csv  libreyolo_hf_full_audit_v230.json  libreyolo_model_discovery_v34.json  libreyolo_model_map_v230.json  libreyolo_pull_all_default_safe_v235.json  libreyolo_rfdetr_s_smoke_v230.json  libreyolo_rtdetr_r50m_smoke_v230.json  libreyolo_yolox_n_smoke_v230.json  pre_v230_stale_output_scan.json  promptable_coco400_v234.json  rfdetr_seg_all_sizes_v232.json  rfdetr_seg_schema_probe_v229.json  rfdetr_segmentation_400_v231.json  rfdetr_segmentation_failures_v231.csv  rfdetr_segmentation_leaderboard_400_v231.csv  rtdetrv4_checkpoint_audit_v230.json  segmentation_auto_instance_400_v227_source.json  v233_all_benchmark_audit.json  v233_anomaly_audit.json  v233_blocked_model_audit.csv  v233_blocked_model_audit.json  v233_cache_status.json  v233_dino_audit.json  (+47 more)
scripts/: build_and_push_sidecars.sh  build_mmrotate_legacy_sidecar.sh  build_openmmlab_sidecar.sh  decide_release_version.py  diagnose_resources.py  imagenette_classification_benchmark.py  kill_visionservex_tests.py  libreyolo_coco_benchmark.py  libreyolo_coco_seg_benchmark.py  open_vocab_coco_benchmark.py  open_vocab_coco_mAP_benchmark.py  rtmpose_coco_keypoints_benchmark.py  run_anomaly_smoke.sh  run_maskdino_smoke.sh  run_mmrotate_oriented_rcnn_smoke.sh  run_openmmlab_rtmdet_smoke.sh  run_openmmlab_rtmpose_smoke.sh  run_openmmlab_sidecar_smoke.sh  run_openmmlab_smoke.sh  run_totalsegmentator_smoke.sh  test_clean_wheel_install.sh  test_notebook_manifest_consumption.py  test_quick_safe.py  test_release_safe.py  test_targeted_safe.py  v310_sam21_onnx_attempt.py  v310_sam3_real_mask_benchmark.py  v31_build_matrices.py  v31_make_tutorials.py  v321_florence2_capture.py  v32_build_ledgers.py  v33_evidence_integrity.py  v33_fresh_install_verify.sh  v33_parse_pytest.py  v33_truth_audit.py  v37_build_matrices.py  v37_drive.py  v37_gen_tutorials.py  v37_run_one.py  v38_generate_license_matrix.py  (+7 more)
tests/: conftest.py  test_annotate_video_v2160.py  test_api_auth.py  test_auto_pull.py  test_benchmark_anomaly.py  test_benchmark_candidates_v2170.py  test_benchmark_classification.py  test_benchmark_detection_persistent_v2170.py  test_benchmark_smoke.py  test_benchmark_surveillance.py  test_ci_fast_excludes_heavy_v235.py  test_classic_smart_refine.py  test_clean_install.py  test_cli.py  test_cli_contract_v2160.py  test_cli_hardening_v2190.py  test_colab_commands.py  test_config.py  test_debug_output_v2170.py  test_deimv2_detection_benchmark_schema_v235.py  test_deimv2_sidecar_create_v235.py  test_dev_safety.py  test_doctor.py  test_doctor_commands_v233.py  test_domain_benchmark_v2180.py  test_download_failed_retryable_v230.py  test_downloads.py  test_evaluator_framework_v2160.py  test_examples_syntax.py  test_extras_all_benchmark_v233.py  test_florence2_dependency_blocker_v230.py  test_gpu_profile_v2160.py  test_leaderboard_purity_v2160.py  test_libreyolo_doctor_v230.py  test_libreyolo_license_audit_v230.py  test_libreyolo_model_discovery_v230.py  test_libreyolo_output_normalization_v230.py  test_libreyolo_smoke_matrix_v230.py  test_logging_redact.py  test_maxvit_alias.py  (+288 more)
tools/: audit_libreyolo_hf_models.py  build_master_notebook.py  build_task_notebooks.py  build_v34_notebook.py  run_model_smoke_matrix.py
(+1028 files in other folders)
